shopping cart controller fixes

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -444,7 +444,7 @@
 
         var ret = {
             button: $(this).attr("id"),
-            totalAmount: $('#final_result').text(),
+            subTotal: $('#sub-total').text(),
             coupon: $('#coupon').text(),
             shipping: $("input[name='shipping_radio']:checked").val()
         };
