--- a/src/main/resources/static/styles/checkout.css
+++ b/src/main/resources/static/styles/checkout.css
@@ -73,7 +73,7 @@ p a {
     display: inline;
     position: relative;
     color: inherit;
-    border-bottom: solid 1px #ffa07f;
+    border-bottom: solid 1px;
     -webkit-transition: all 200ms ease;
     -moz-transition: all 200ms ease;
     -ms-transition: all 200ms ease;
@@ -107,7 +107,6 @@ p a:active {
 
 p a:hover {
     color: #FFFFFF;
-    background: #ffa07f;
 }
 
 p a:hover::after {
