breadcrumbs fix in checkout page

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -38,6 +38,7 @@
                         <div class="breadcrumbs d-flex flex-column align-items-center justify-content-center">
                             <ul class="d-flex flex-row align-items-start justify-content-start text-center">
                                 <li><a th:href="@{/}">Home</a></li>
+                                <li><a th:href="@{/cart}">Your Cart</a></li>
                                 <li style="color: #fbaa1d">Checkout</li>
                             </ul>
                         </div>
