no data icon added to admin panel tabs

--- a/src/main/resources/templates/admin_panel/_campaign.html
+++ b/src/main/resources/templates/admin_panel/_campaign.html
@@ -287,6 +287,9 @@
 <!-- No categories -->
 <span th:unless="${campaignPage.totalPages >0}">
 <div class="warning-text">There are no campaigns.</div>
+    <div style="text-align: center; padding-bottom: 30px">
+        <img th:src="@{/static/images/no_data.png}">
+    </div>
 </span>
 
 <script>
