--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -281,6 +281,9 @@
 <!-- No category -->
 <span th:unless="${categoryPage.totalPages > 0}">
     <div class="warning-text">There are no categories.</div>
+    <div style="text-align: center; padding-bottom: 30px">
+        <img th:src="@{/static/images/no_data.png}">
+    </div>
 </span>
 
 
