productListEmpty attribute added

--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1350,7 +1350,7 @@
 </div>
 
 <!-- Sort orders -->
-<span th:if="${allProducts.size() > 0}">
+<span th:if="${productListEmpty == false}">
 <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
     <div class="products_dropdown product_dropdown_sorting">
         <div class="isotope_sorting_text"><span>Sort</span><i
