sort and filter  button removed in empty situation in admin panel hot list tab

--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -131,7 +131,7 @@
         </div>
     </div>
 </div>
-
+<span th:if="${hotListListEmpty == false}">
 <!-- Sort orders -->
 <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
     <div class="products_dropdown product_dropdown_sorting">
@@ -239,6 +239,8 @@
             </ul>
         </div>
 </div>
+
+    </span>
 
 <br>
 <span th:if="${hotListPage.totalPages>0}">
