empty situation check added to user details search history tab

--- a/src/main/resources/templates/user_details/_search.html
+++ b/src/main/resources/templates/user_details/_search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<span th:if="${totalSearchValues == false}">
+<span th:if="${searchValuesListEmpty == false}">
 <!-- Sort orders -->
 <div class="products_bar_side d-flex flex-row align-items-start justify-content-start ml-lg-auto">
     <div class="products_dropdown product_dropdown_sorting">
@@ -122,7 +122,7 @@
 </span>
 
 <span th:unless="${keyPage.totalPages >0}">
-<div class="warning-text">There are no users.</div>
+<div class="warning-text">There are no search values.</div>
     <div style="text-align: center; padding-bottom: 30px">
         <img th:src="@{/static/images/no_data.png}">
     </div>
