empty hot list message fixed

--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -375,7 +375,7 @@
 
 <!-- No categories -->
 <span th:unless="${hotListPage.totalPages >0}">
-<div class="warning-text">There are no campaigns.</div>
+<div class="warning-text">There are no hot lists.</div>
     <div style="text-align: center; padding-bottom: 30px">
         <img th:src="@{/static/images/no_data.png}">
     </div>
